[package]
name = "compiler-tools-derive"
version = "0.1.1"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Protryon/compiler-tools"
description = "A proc-macro for deriving powerful and fast tokenizers with compile-time regex"
keywords = [ "compiler", "parser", "generator" ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
indexmap = "1.8"
regex = { version = "1.5" }

[dev-dependencies]
compiler-tools = { version = "0.1", path = "../compiler-tools" }

[features]
