[package]
name = "compiler-tools-derive"
version = "0.1.7"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/compiler-tools"
description = "A proc-macro for deriving powerful and fast tokenizers with compile-time regex"
keywords = [ "compiler", "parser", "generator" ]
rust-version = "1.75.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
indexmap = "2.2"
regex = { version = "1.10" }

[dev-dependencies]
compiler-tools = { version = "0.1", path = "../compiler-tools" }

[features]
