[package]
name = "compiler-tools-regex"
version = "0.2.0"
edition = "2024"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/compiler-tools"
description = "The compile-time simple-regex engine backing compiler-tools' #[token(regex = ...)]"
keywords = [ "compiler", "parser", "regex" ]
rust-version = "1.85.0"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
