[package]
name = "compiler-tools-regex"
version = "0.2.0"
edition = "2024"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/compiler-tools"
description = "The compile-time simple-regex engine backing compiler-tools' #[token(regex = ...)]"
keywords = [ "compiler", "parser", "regex" ]
rust-version = "1.85.0"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
# Build-time only: the regex crate's own parser, used purely as an authoritative
# source of Unicode tables (property classes, case folding). This engine runs at
# macro-expansion / build time, so `regex-syntax` never reaches the runtime crate —
# generated matchers stay plain codepoint-range checks with no Unicode dependency.
regex-syntax = "0.8"

# The `jit` backend: a third consumer of the `Dfa` that lowers it to native code at
# runtime via Cranelift (alongside the interpreter in `matching.rs` and the Rust-source
# codegen in `generate.rs`). Off by default — Cranelift is a heavy tree, so it stays
# opt-in. Pinned to 0.121.x, whose `rust-version` is exactly the workspace MSRV (1.85.0);
# newer Cranelift releases raise their MSRV in lockstep with the Rust release train, so
# bumping these crates means bumping the workspace MSRV too.
cranelift-jit = { version = "0.121.2", optional = true }
cranelift-module = { version = "0.121.2", optional = true }
cranelift-codegen = { version = "0.121.2", optional = true }
cranelift-frontend = { version = "0.121.2", optional = true }

[features]
default = []
jit = ["dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-codegen", "dep:cranelift-frontend"]
