[package]
name = "regex-conformance"
version = "0.0.0"
edition = "2024"
publish = false
description = "Runs the upstream regex test corpus (testdata/) against both compiler-tools simple-regex engines"
rust-version = "1.85.0"

[dependencies]
# The runtime interpreter under test, plus the runtime crate the generated
# compiled matchers refer to via `::compiler_tools::...`.
compiler-tools-regex = { version = "0.2.0", path = "../compiler-tools-regex" }
compiler-tools = { version = "0.2.0", path = "../compiler-tools" }
regex-test = "0.1"

[features]
# Run the Cranelift JIT engine as a third conformance column (off by default — pulls in
# Cranelift). `cargo test -p regex-conformance --features jit --test conformance -- --nocapture`.
jit = ["compiler-tools-regex/jit"]

[dev-dependencies]
# The benchmark times the passing-test set across the two simple-regex engines
# and the upstream `regex` crate (for comparison), driven by cargo-criterion.
criterion = "0.5"
regex = "1.12"

[build-dependencies]
# The build script uses the engine to code-generate one compiled matcher per test.
compiler-tools-regex = { version = "0.2.0", path = "../compiler-tools-regex" }
regex-test = "0.1"
quote = "1.0"
proc-macro2 = "1.0"

[[bench]]
name = "passing"
harness = false
